Thu Feb  4  9:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/dummy.m: renamed to Functions.m
	* Tools/Functions.m: created from dummy.m -some functions added
	* Tools/GNUmakefile: updated dummy.m to Functions.m
	* Source/NSApplication.m: Fixed to update all only when necessary.
	* Source/NSWindow.m: Fix to tell application when update required.
	The following files revised by ... 
	* Source/NSScroller.m: Drawing fixes
	* Source/NSScrollView.m: Drawing fixes
	* Source/NSClipViem.m: Drawing fixes

1999-02-01  Adam Fedor  <fedor@gnu.org>

	* Model/test.m (main): Fix LIB_FOUNDATION ifdef.
	* Source/GSContext.m (-wait): New method. (Bug report from Eric
	Norum <eric@skatter.usask.ca>).

Mon Feb  1 13:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSServicesManager.m: Replace call to getpid() with use of
	globallyUniqueString as a unique process name.

Fri Jan 29 15:32:48 1999  Adam Fedor  <fedor@ultra.doc.com>

	* Documentation/todo.tmpl.texi: Update.

1999-01-28  Adam Fedor  <fedor@doc.com>

	* Model/GNUmakefile (libgmodel_OBJC_FILES): Add GMArchiver.m.
	(ADDITIONAL_TOOL_LIBS): Remove FoundationExt.
	* Headers/gnustep/gui/GMAppKit.h: Update GMArchiver include.
	* Model/IBClasses.m: Likewise.
	* Model/IMConnectors.m: Likewise.
	* Model/IMCustomObject.m: Likewise.
	* Model/IMConnectors.m: Likewise.
	* Model/IMLoading.m: Likewise.
	* Model/Translator.m: Likewise.
	* Source/NSPanel.m: Likewise.
	* Source/NSSavePanel.m: Likewise.


Fri Jan 22 20:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView: Rewrote all the coordinate conversion methods to
	take account of flipped views correctly.  Should be a major improvement.

Thu Jan 21 10:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSColor.m: Fixed initWithCoder: - was decoding an ivar twice
	(bug report by Benhur-de-Oliveira.Stein@imag.fr) - also used @encode()
	everywhere.
